# cpm-emokit

./: .gitignore  CMakeLists.txt  README.md
tests/: CMakeLists.txt  test.c
